# skillmatch-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  cowork_monitor.py  email_ranked_jobs.bat  email_ranked_jobs.py  pyproject.toml  server.json  server.py
.github/workflows/: publish.yml  tests.yml
tests/: test_server.py
